# fubon-sdk-ffi

./: .gitignore  CLAUDE.md  README.md
.claude/skills/cpp-to-c-abi/: SKILL.md
.claude/skills/cpp-to-c-abi/references/: cmake-template.md  header-template.md  impl-template.md  test-template.md
c_wrapper/: CMakeLists.txt  README.md
c_wrapper/include/: fubon_c.h  sdk.hpp
c_wrapper/src/: fubon_c.cpp  helpers.cpp
c_wrapper/test/: test_sdk.c
docs/: ACCOUNTING_TASKS.md  IMPLEMENTATION_GUIDE.md  SDK_API_CATALOG.md  TESTING_GUIDE.md
fubon-cpp-sdk/: CMakeLists.txt
fubon-cpp-sdk/Example/: main.cpp
fubon-cpp-sdk/bindings/: fubon.cpp  fubon.hpp  fubon.lib  fubon_scaffolding.hpp  pretty_print.cpp  pretty_print.hpp  sdk.hpp
